kubernetes/hcloud/apps/selfhosted/headscale/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headscale
  namespace: selfhosted
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - "headscale.onji.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headscale  # dein Service Name
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: headscale-upgrade-policy
  namespace: selfhosted
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: headscale
  http2:
    onConnect: true
  # Wichtig für WebSocket/Upgrade
  timeout:
    http:
      requestTimeout: 0s  # Kein Timeout für lange Verbindungen
